# cpp_indie_studio_2017

./: .gitignore  CMakeLists.txt  README.md  irrlicht_install.sh  quick_install.sh
ressources/Bomb/: Bomb.mtl
ressources/Car/BlueBird/: BlueBird.mtl
ressources/Car/Bruno/: bruno_car.mtl  info.txt
ressources/Car/Mitraille/: Cheapy.mtl
ressources/Car/Sinder/: info.txt  sinder_car.mtl
ressources/Car/SunnyGo/: criminalboat.mtl
ressources/Flamer_Fuel/: flamer_fuel.mtl
ressources/Fonts/: big.xml  little.xml
ressources/Fonts/Result/: myfont.xml  result.xml
ressources/Fonts/Xolonium/: FontMenu.xml
ressources/Heart/: ItmHeart.dae  ItmHeart.mtl
ressources/course/: Kinoko.mtl  Kinoko.obj.mtl
ressources/cross_course/: cross_course.mtl
sources/: main.cpp
sources/controller/: AController.cpp  AController.hpp
sources/controller/Game/: Game.cpp  Game.hpp
sources/controller/Result/: Result.cpp  Result.hpp
sources/controller/SelectCarMenu/: SelectCarMenu.cpp  SelectCarMenu.hpp
sources/controller/SelectCircuitMenu/: SelectCircuitMenu.cpp  SelectCircuitMenu.hpp
sources/controller/SplashScreen/: SplashScreen.cpp  SplashScreen.hpp
sources/controller/UIMenu/: UIMenu.cpp  UIMenu.hpp
sources/controller/UIOptions/: UIOptions.cpp  UIOptions.hpp
sources/core/: EventReceiver.hpp
sources/core/ModelManager/: ModelManager.cpp  ModelManager.hpp
sources/core/System/: System.cpp  System.hpp
sources/engine/Physics/Acceleration/: AAccelerable.cpp  AAccelerable.hpp
sources/engine/Ressource/: IRessouce.hpp  MRessource.cpp  MRessource.hpp  Ressource.hpp
sources/engine/RessourceManager/: RessourceManager.cpp  RessourceManager.hpp
sources/engine/SceneManager/: SceneManager.cpp  SceneManager.hpp
sources/model/AI/: AI.cpp  AI.hpp
sources/model/AModel/: AModel.cpp  AModel.hpp
sources/model/APowerUp/: APowerUp.cpp  APowerUp.hpp
sources/model/Car/: Car.cpp  Car.hpp  CarEffects.cpp  CarEffects.hpp
sources/model/Car/BlueBird/: BlueBird.cpp  BlueBird.hpp
sources/model/Car/Bruno/: Bruno.cpp  Bruno.hpp
sources/model/Car/Mitraille/: Mitraille.cpp  Mitraille.hpp
sources/model/Car/Sinder/: Sinder.cpp  Sinder.hpp
sources/model/Car/SunnyGo/: SunnyGo.cpp  SunnyGo.hpp
sources/model/Circuit/: ACircuit.cpp  ACircuit.hpp
sources/model/Circuit/Basic/: Basic.cpp  Basic.hpp
sources/model/Circuit/Height/: Height.cpp  Height.hpp
sources/model/Collision/: CollisionHandler.cpp  CollisionHandler.hpp
sources/model/Player/: Player.cpp  Player.hpp
sources/model/PowerUp/: Bomb.cpp  Bomb.hpp  Boost.cpp  Boost.hpp  Reparation.cpp  Reparation.hpp
sources/model/PowerUpManager/: PowerUpManager.cpp  PowerUpManager.hpp
sources/model/Timer/: Timer.cpp  Timer.hpp
sources/model/UIButton/: UIButton.cpp  UIButton.hpp
sources/view/: AView.cpp  AView.hpp
sources/view/Game/: GameView.cpp  GameView.hpp
sources/view/Result/: ResultView.cpp  ResultView.hpp
sources/view/SelectCarMenu/: SelectCarMenuView.cpp  SelectCarMenuView.hpp
sources/view/SelectCircuitMenu/: SelectCircuitMenuView.cpp  SelectCircuitMenuView.hpp
sources/view/SplashScreen/: SplashScreenView.cpp  SplashScreenView.hpp
sources/view/UIMenu/: UIMenuView.cpp  UIMenuView.hpp
sources/view/UIOptions/: UIOptionsView.cpp  UIOptionsView.hpp
